Fix unnecessary file references